# pre-commit-ensure-uv

./: .gitlab-ci.yml  .pre-commit-hooks.yaml  .shellcheckrc  CLAUDE.md  README.md  pre_commit_ensure_uv.py  pyproject.toml
.github/workflows/: integration.yml  publish.yml  test.yml
test/: Dockerfile  setup_test_project.py
