[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pre-commit-ensure-uv"
version = "0.1.0"
description = "Pre-commit hook to ensure uv is installed"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Jamie Nelson" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["pre-commit", "uv", "astral"]

[project.scripts]
ensure-uv = "pre_commit_ensure_uv:main"

[project.urls]
Homepage = "https://github.com/Jamie-BitFlight/pre-commit-ensure-uv"
Repository = "https://github.com/Jamie-BitFlight/pre-commit-ensure-uv"
